--- a/index.html
+++ b/index.html
@@ -531,6 +531,69 @@
             </div>
         </section>
 
+        <!-- -----------------------CONTACT ME------------------------- -->
+        <section class="contact section" id="contact">
+            <h2 class="section_title">Contact Me</h2>
+            <span class="section_subtitle">Get in touch</span>
+
+            <div class="contact_container container grid">
+                <div>
+                    <div class="contact_information">
+                        <i class="uil uil-phone contact_icon"></i>
+
+                        <div>
+                            <h3 class="contact_title">Call Me</h3>
+                            <span class="contact_subtitle">+91 97572 12304</span>
+                        </div>
+                    </div>
+                    <div class="contact_information">
+                        <i class="uil uil-envelope contact_icon"></i>
+
+                        <div>
+                            <h3 class="contact_title">Email</h3>
+                            <span class="contact_subtitle">vedgawade1211@gmail.com</span>
+                        </div>
+                    </div>
+                    <div class="contact_information">
+                        <i class="uil uil-map-marker contact_icon"></i>
+
+                        <div>
+                            <h3 class="contact_title">Location</h3>
+                            <span class="contact_subtitle">Navi Mumbai - India</span>
+                        </div>
+                    </div>
+                </div>
+
+                <form action="" class="contact_form grid">
+                    <div class="contact_inputs grid">
+                        <div class="contact_content">
+                            <label for="" class="contact_label">Name</label>
+                            <input type="text" class="contact_input">
+                        </div>
+                        <div class="contact_content">
+                            <label for="" class="contact_label">Email</label>
+                            <input type="email" class="contact_input">
+                        </div>
+                    </div>
+                    <div class="contact_content">
+                        <label for="" class="contact_label">Project</label>
+                        <input type="text" class="contact_input">
+                    </div>
+                    <div class="contact_content">
+                        <label for="" class="contact_label">Message</label>
+                        <textarea name="" id="" cols="0" rows="7" class="contact_input"></textarea>
+                    </div>
+
+                    <div>
+                        <a href="" class="button button--flex">
+                            Send Message
+                            <i class="uil uil-message button_icon"></i>
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </section>
+
         <!-----------------------FOOTER----------------------------->
         <footer class="footer">
             <div class="footer_bg">
@@ -548,7 +611,7 @@
                             <a href="#portfolio" class="footer_link">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#contact" class="footer_link">Contact Me</a>
+                            <a href="#contact" class="footer_link">ContactMe</a>
                         </li>
                     </ul>
 
@@ -567,7 +630,7 @@
                     </div>
                 </div>
 
-                <p class="footer_copy">&#169; Ved. All rights reserved</p>
+                <p class="footer_copy">&#169;All rights reserved</p>
             </div>
         </footer>
 
