Qualification section error solved

--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
                                 <span class="qualification_line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification_title">Web Developer</h3>
-                                <span class="qualification_subtitle">Coursera</span>
+                                <h3 class="qualification_title">Responsive Website: Code with HTML, CSS, JavaScript</h3>
+                                <span class="qualification_subtitle">University of London</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2021-2024
@@ -400,8 +400,8 @@
                         <!-- -------------------QUALIFICATION 3--------------------------- -->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">Electronics & Computer Science Engineer</h3>
-                                <span class="qualification_subtitle">SIES Graduate School of Technology</span>
+                                <h3 class="qualification_title">Agile Software Development</h3>
+                                <span class="qualification_subtitle">University of Minnesota</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2021-2024
@@ -423,8 +423,8 @@
                                 <!-- <span class="qualification_line"></span> -->
                             </div>
                             <div>
-                                <h3 class="qualification_title">Electronics & Computer Science Engineer</h3>
-                                <span class="qualification_subtitle">SIES Graduate School of Technology</span>
+                                <h3 class="qualification_title">Grade 6 Pianist</h3>
+                                <span class="qualification_subtitle">Trinity College of London</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2021-2024
@@ -438,11 +438,11 @@
                         <!-- -------------------QUALIFICATION 1--------------------------- -->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">Electronics & Computer Science Engineer</h3>
-                                <span class="qualification_subtitle">SIES Graduate School of Technology</span>
+                                <h3 class="qualification_title">Chairperson</h3>
+                                <span class="qualification_subtitle">E-CELL SIES GST</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021-2024
+                                    2023-2024
                                 </div>
                             </div>
 
@@ -461,11 +461,11 @@
                                 <span class="qualification_line"></span>
                             </div>
                             <div>
-                                <h3 class="qualification_title">Web Developer</h3>
-                                <span class="qualification_subtitle">Coursera</span>
+                                <h3 class="qualification_title">Technical Head</h3>
+                                <span class="qualification_subtitle">IEEE SIES GST</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021-2024
+                                    2022-2023
                                 </div>
                             </div>
                         </div>
@@ -473,11 +473,11 @@
                         <!-- -------------------QUALIFICATION 3--------------------------- -->
                         <div class="qualification_data">
                             <div>
-                                <h3 class="qualification_title">Electronics & Computer Science Engineer</h3>
-                                <span class="qualification_subtitle">SIES Graduate School of Technology</span>
+                                <h3 class="qualification_title">Technical Jr. Coordinator</h3>
+                                <span class="qualification_subtitle">E-CELL SIES GST</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021-2024
+                                    2021-2022
                                 </div>
                             </div>
 
@@ -496,11 +496,11 @@
                                 <!-- <span class="qualification_line"></span> -->
                             </div>
                             <div>
-                                <h3 class="qualification_title">Electronics & Computer Science Engineer</h3>
-                                <span class="qualification_subtitle">SIES Graduate School of Technology</span>
+                                <h3 class="qualification_title">Treasure</h3>
+                                <span class="qualification_subtitle">E-CELL SIES GST</span>
                                 <div class="qualification_calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2021-2024
+                                    2022-2023
                                 </div>
                             </div>
                         </div>
